// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HL7v2 Message should handle repetead segments 1`] = `
{
  "MSH": {
    "1": "|",
    "10": "9000123",
    "11": "D",
    "12": "2.7",
    "13": "",
    "2": "^~&|",
    "3": "EPIC",
    "4": "",
    "5": "SMS",
    "6": "SMSDT",
    "7": "201501011408",
    "8": "",
    "9": {
      "1": "ADT",
      "2": "A04",
    },
  },
  "NK1": [
    {
      "1": "",
      "2": {
        "1": "CONROY",
        "2": "MARI",
      },
      "3": "SPO",
      "4": "",
      "5": "(216)731-4359",
    },
    {
      "1": "",
      "2": {
        "1": "DOE",
        "2": "JOHNNY",
        "3": "",
        "4": "",
        "5": "",
        "6": "",
      },
      "3": "CHD",
      "4": "",
      "5": "(216)731-4222",
    },
    {
      "1": "",
      "2": {
        "1": "DOE",
        "2": "ROBERT ",
        "3": "",
        "4": "",
        "5": "",
        "6": "",
      },
      "3": "CHD",
      "4": "",
      "5": "(216)731-4222",
    },
  ],
  "PID": {
    "1": "",
    "2": {
      "1": "0493575",
      "2": "",
      "3": "",
      "4": "2",
      "5": "ID 1",
    },
    "3": "454721",
    "4": "",
    "5": {
      "1": "DOE",
      "2": "JOHN",
    },
  },
  "PV1": {
    "1": "",
    "2": "O",
    "3": [
      "168 ",
      "219",
      "C",
      "P",
    ],
  },
}
`;

exports[`HL7v2 Message should have an Original JSON parsed format 1`] = `
{
  "AIG": {
    "1": "1",
    "2": "",
    "3": {
      "1": "PULLEN",
      "2": "Pullen, Jeri",
    },
    "4": {
      "1": "P",
      "2": "",
      "3": "CSI",
    },
  },
  "AIL": {
    "1": "1",
    "2": "",
    "3": {
      "1": "MainOffi",
      "2": "",
      "3": "",
      "4": "MainOffi",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "Healthmatics Clinic",
    },
    "4": {
      "1": "",
      "2": "Healthmatics Clinic",
      "3": "CSI",
    },
  },
  "AIP": {
    "1": "1",
    "10": {
      "1": "m",
      "2": "Minutes",
    },
    "2": "",
    "3": {
      "1": "JPULLEN1",
      "2": "Pullen",
      "3": "Jeri",
      "4": "",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "&F12456&UPIN",
    },
    "4": {
      "1": "D",
      "2": "Pullen, Jeri",
    },
    "5": "",
    "6": "20190423140000",
    "7": "",
    "8": "",
    "9": "15",
  },
  "MSH": {
    "1": "|",
    "10": "8907-45",
    "11": "P",
    "12": "2.3",
    "13": "",
    "14": "",
    "15": "NE",
    "16": "NE",
    "2": "^~\\&",
    "3": "Ntierprise",
    "4": "Ntierprise Clinic",
    "5": "Healthmatics EHR",
    "6": "Healthmatics Clinic",
    "7": "20190423114154",
    "8": "",
    "9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "PID": {
    "1": "1",
    "10": "",
    "11": {
      "1": "007 Soho Lane",
      "2": "",
      "3": "Cary",
      "4": "NC",
      "5": "27511",
    },
    "12": "",
    "13": [
      {
        "1": "(919)007-0007",
        "2": "",
        "3": "",
        "4": "",
        "5": "",
        "6": "919",
        "7": "0070007",
      },
      {
        "1": "(777)707-0707",
        "2": "",
        "3": "CP",
        "4": "",
        "5": "",
        "6": "777",
        "7": "7070707",
      },
      {
        "1": "",
        "2": "NET",
        "3": "X.400",
        "4": "007@BritishSecretService.com",
      },
    ],
    "14": {
      "1": "(919)851-6177 X007",
      "2": "",
      "3": "",
      "4": "",
      "5": "",
      "6": "919",
      "7": "8516177",
      "8": "007",
    },
    "15": "",
    "16": "M",
    "17": "",
    "18": "150",
    "19": "007-00-0007",
    "2": "",
    "20": "",
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": "",
    "26": "",
    "27": "",
    "28": "",
    "29": "",
    "3": "150",
    "30": "N",
    "4": "",
    "5": {
      "1": "Bond",
      "2": "James",
      "3": "",
      "4": "007",
    },
    "6": "",
    "7": "19770920",
    "8": "M",
    "9": "",
  },
  "PV1": {
    "1": "1",
    "10": "",
    "11": "",
    "12": "",
    "13": "",
    "14": "",
    "15": "",
    "16": "N",
    "17": "",
    "18": "",
    "19": "",
    "2": "R",
    "20": "M",
    "3": "",
    "4": "",
    "5": "",
    "6": "",
    "7": {
      "1": "MRYAN",
      "2": "Ryan",
      "3": "Mark",
      "4": "S",
      "5": "phd",
      "6": "",
      "7": "",
      "8": "",
      "9": "&MR1127&UPIN",
    },
    "8": "",
    "9": {
      "1": "WEEDER",
      "2": "Weeder, M.D.",
      "3": "Dana",
      "4": "N",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "&W22630&UPIN",
    },
  },
  "RGS": {
    "1": "1",
    "2": "A",
  },
  "SCH": {
    "1": "1209",
    "10": "m",
    "11": {
      "1": "",
      "2": "",
      "3": "15",
      "4": "20190423140000",
      "5": "20190423141500",
    },
    "12": "",
    "13": "",
    "14": "",
    "15": "",
    "16": {
      "1": "mdrxmbyr",
      "2": "Byrne",
      "3": "Misty",
    },
    "17": "",
    "18": "",
    "19": "",
    "2": "13030",
    "20": {
      "1": "mdrxmbyr",
      "2": "Byrne",
      "3": "Misty",
    },
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": {
      "1": "Scheduled",
      "2": "",
      "3": "CSI",
    },
    "3": "",
    "4": "",
    "5": "1209",
    "6": {
      "1": "OV15",
      "2": "OFFICE VISIT-15",
      "3": "CSI",
      "4": "N",
    },
    "7": {
      "1": "OFFICE VISIT-15",
      "2": "OFFICE VISIT-15 -",
    },
    "8": "OV15",
    "9": "15",
  },
}
`;

exports[`HL7v2 Message should parse message with custom delimiters 1`] = `
{
  "AIG": {
    "1": "1",
    "2": "",
    "3": {
      "1": "PULLEN",
      "2": "Pullen, Jeri",
    },
    "4": {
      "1": "P",
      "2": "",
      "3": "CSI",
    },
  },
  "AIL": {
    "1": "1",
    "2": "",
    "3": {
      "1": "MainOffi",
      "2": "",
      "3": "",
      "4": "MainOffi",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "Healthmatics Clinic",
    },
    "4": {
      "1": "",
      "2": "Healthmatics Clinic",
      "3": "CSI",
    },
  },
  "AIP": {
    "1": "1",
    "10": {
      "1": "m",
      "2": "Minutes",
    },
    "2": "",
    "3": {
      "1": "JPULLEN1",
      "2": "Pullen",
      "3": "Jeri",
      "4": "",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "^F12456^UPIN",
    },
    "4": {
      "1": "D",
      "2": "Pullen, Jeri",
    },
    "5": "",
    "6": "20190423140000",
    "7": "",
    "8": "",
    "9": "15",
  },
  "MSH": {
    "1": "$",
    "10": "8907-45",
    "11": "P",
    "12": "2.3",
    "13": "",
    "14": "",
    "15": "NE",
    "16": "NE",
    "2": "%!?^",
    "3": "Ntierprise",
    "4": "Ntierprise Clinic",
    "5": "Healthmatics EHR",
    "6": "Healthmatics Clinic",
    "7": "20190423114154",
    "8": "",
    "9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "PID": {
    "1": "1",
    "10": "",
    "11": {
      "1": "007 Soho Lane",
      "2": "",
      "3": "Cary",
      "4": "NC",
      "5": "27511",
    },
    "12": "",
    "13": [
      {
        "1": "(919)007-0007",
        "2": "",
        "3": "",
        "4": "",
        "5": "",
        "6": "919",
        "7": "0070007",
      },
      {
        "1": "(777)707-0707",
        "2": "",
        "3": "CP",
        "4": "",
        "5": "",
        "6": "777",
        "7": "7070707",
      },
      {
        "1": "",
        "2": "NET",
        "3": "X.400",
        "4": "007@BritishSecretService.com",
      },
    ],
    "14": {
      "1": "(919)851-6177 X007",
      "2": "",
      "3": "",
      "4": "",
      "5": "",
      "6": "919",
      "7": "8516177",
      "8": "007",
    },
    "15": "",
    "16": "M",
    "17": "",
    "18": "150",
    "19": "007-00-0007",
    "2": "",
    "20": "",
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": "",
    "26": "",
    "27": "",
    "28": "",
    "29": "",
    "3": "150",
    "30": "N",
    "4": "",
    "5": {
      "1": "Bond",
      "2": "James",
      "3": "",
      "4": "007",
    },
    "6": "",
    "7": "19770920",
    "8": "M",
    "9": "",
  },
  "PV1": {
    "1": "1",
    "10": "",
    "11": "",
    "12": "",
    "13": "",
    "14": "",
    "15": "",
    "16": "N",
    "17": "",
    "18": "",
    "19": "",
    "2": "R",
    "20": "M",
    "3": "",
    "4": "",
    "5": "",
    "6": "",
    "7": {
      "1": "MRYAN",
      "2": "Ryan",
      "3": "Mark",
      "4": "S",
      "5": "phd",
      "6": "",
      "7": "",
      "8": "",
      "9": "^MR1127^UPIN",
    },
    "8": "",
    "9": {
      "1": "WEEDER",
      "2": "Weeder, M.D.",
      "3": "Dana",
      "4": "N",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "^W22630^UPIN",
    },
  },
  "RGS": {
    "1": "1",
    "2": "A",
  },
  "SCH": {
    "1": "1209",
    "10": "m",
    "11": {
      "1": "",
      "2": "",
      "3": "15",
      "4": "20190423140000",
      "5": "20190423141500",
    },
    "12": "",
    "13": "",
    "14": "",
    "15": "",
    "16": {
      "1": "mdrxmbyr",
      "2": "Byrne",
      "3": "Misty",
    },
    "17": "",
    "18": "",
    "19": "",
    "2": "13030",
    "20": {
      "1": "mdrxmbyr",
      "2": "Byrne",
      "3": "Misty",
    },
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": {
      "1": "Scheduled",
      "2": "",
      "3": "CSI",
    },
    "3": "",
    "4": "",
    "5": "1209",
    "6": {
      "1": "OV15",
      "2": "OFFICE VISIT-15",
      "3": "CSI",
      "4": "N",
    },
    "7": {
      "1": "OFFICE VISIT-15",
      "2": "OFFICE VISIT-15 -",
    },
    "8": "OV15",
    "9": "15",
  },
}
`;

exports[`HL7v2 Message should return the Original value if no Expression is provided 1`] = `
{
  "AIG": {
    "1": "1",
    "2": "",
    "3": {
      "1": "PULLEN",
      "2": "Pullen, Jeri",
    },
    "4": {
      "1": "P",
      "2": "",
      "3": "CSI",
    },
  },
  "AIL": {
    "1": "1",
    "2": "",
    "3": {
      "1": "MainOffi",
      "2": "",
      "3": "",
      "4": "MainOffi",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "Healthmatics Clinic",
    },
    "4": {
      "1": "",
      "2": "Healthmatics Clinic",
      "3": "CSI",
    },
  },
  "AIP": {
    "1": "1",
    "10": {
      "1": "m",
      "2": "Minutes",
    },
    "2": "",
    "3": {
      "1": "JPULLEN1",
      "2": "Pullen",
      "3": "Jeri",
      "4": "",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "&F12456&UPIN",
    },
    "4": {
      "1": "D",
      "2": "Pullen, Jeri",
    },
    "5": "",
    "6": "20190423140000",
    "7": "",
    "8": "",
    "9": "15",
  },
  "MSH": {
    "1": "|",
    "10": "8907-45",
    "11": "P",
    "12": "2.3",
    "13": "",
    "14": "",
    "15": "NE",
    "16": "NE",
    "2": "^~\\&",
    "3": "Ntierprise",
    "4": "Ntierprise Clinic",
    "5": "Healthmatics EHR",
    "6": "Healthmatics Clinic",
    "7": "20190423114154",
    "8": "",
    "9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "PID": {
    "1": "1",
    "10": "",
    "11": {
      "1": "007 Soho Lane",
      "2": "",
      "3": "Cary",
      "4": "NC",
      "5": "27511",
    },
    "12": "",
    "13": [
      {
        "1": "(919)007-0007",
        "2": "",
        "3": "",
        "4": "",
        "5": "",
        "6": "919",
        "7": "0070007",
      },
      {
        "1": "(777)707-0707",
        "2": "",
        "3": "CP",
        "4": "",
        "5": "",
        "6": "777",
        "7": "7070707",
      },
      {
        "1": "",
        "2": "NET",
        "3": "X.400",
        "4": "007@BritishSecretService.com",
      },
    ],
    "14": {
      "1": "(919)851-6177 X007",
      "2": "",
      "3": "",
      "4": "",
      "5": "",
      "6": "919",
      "7": "8516177",
      "8": "007",
    },
    "15": "",
    "16": "M",
    "17": "",
    "18": "150",
    "19": "007-00-0007",
    "2": "",
    "20": "",
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": "",
    "26": "",
    "27": "",
    "28": "",
    "29": "",
    "3": "150",
    "30": "N",
    "4": "",
    "5": {
      "1": "Bond",
      "2": "James",
      "3": "",
      "4": "007",
    },
    "6": "",
    "7": "19770920",
    "8": "M",
    "9": "",
  },
  "PV1": {
    "1": "1",
    "10": "",
    "11": "",
    "12": "",
    "13": "",
    "14": "",
    "15": "",
    "16": "N",
    "17": "",
    "18": "",
    "19": "",
    "2": "R",
    "20": "M",
    "3": "",
    "4": "",
    "5": "",
    "6": "",
    "7": {
      "1": "MRYAN",
      "2": "Ryan",
      "3": "Mark",
      "4": "S",
      "5": "phd",
      "6": "",
      "7": "",
      "8": "",
      "9": "&MR1127&UPIN",
    },
    "8": "",
    "9": {
      "1": "WEEDER",
      "2": "Weeder, M.D.",
      "3": "Dana",
      "4": "N",
      "5": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "&W22630&UPIN",
    },
  },
  "RGS": {
    "1": "1",
    "2": "A",
  },
  "SCH": {
    "1": "1209",
    "10": "m",
    "11": {
      "1": "",
      "2": "",
      "3": "15",
      "4": "20190423140000",
      "5": "20190423141500",
    },
    "12": "",
    "13": "",
    "14": "",
    "15": "",
    "16": {
      "1": "mdrxmbyr",
      "2": "Byrne",
      "3": "Misty",
    },
    "17": "",
    "18": "",
    "19": "",
    "2": "13030",
    "20": {
      "1": "mdrxmbyr",
      "2": "Byrne",
      "3": "Misty",
    },
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": {
      "1": "Scheduled",
      "2": "",
      "3": "CSI",
    },
    "3": "",
    "4": "",
    "5": "1209",
    "6": {
      "1": "OV15",
      "2": "OFFICE VISIT-15",
      "3": "CSI",
      "4": "N",
    },
    "7": {
      "1": "OFFICE VISIT-15",
      "2": "OFFICE VISIT-15 -",
    },
    "8": "OV15",
    "9": "15",
  },
}
`;

exports[`Message with JSONata expression should resolve JSONata from jsonata file 1`] = `
{
  "PID": {
    "patientID": {},
    "patientIdentifierList": [
      {},
    ],
    "patientName": {
      "familyName": "Bond",
      "givenName": "James",
      "secondAndFurtherGivenNamesOrInitialsThereof": "",
      "suffix": "007",
    },
    "setID": "1",
  },
}
`;
